// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletedListItemContainer should render rtl text correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div>
  <li
    class="emotion-0"
    role="listitem"
  >
    It is unordered
  </li>
</div>
`;

exports[`BulletedListItemContainer should render text correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div>
  <li
    class="emotion-0"
    role="listitem"
  >
    Here is a list
  </li>
</div>
`;
